Fix Quick/Follow Link Alignment.

--- a/src/sections/Section8/Section8.css
+++ b/src/sections/Section8/Section8.css
@@ -6,7 +6,6 @@
     background-color: black;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     color: white;
     padding: 37px 0px;
     overflow: hidden;
@@ -16,7 +15,7 @@
     flex-direction: column;
     width: 23.5%;
     line-height: 29px;
-   
+    
 }
 .section8-left p{
     font-family: 'Urbanist';
@@ -43,7 +42,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -5.5%;
+    
+    /* margin-top: -5.5%; */
 }
 .icons{
     display: flex;
@@ -72,6 +72,13 @@
     display: none;
 }
 
+.educrafter{
+    text-align: left  !important;
+    width: 100%;
+}
+.section8-right,.section8-center{
+    padding-top: 0.5rem;
+}
 
 @media(max-width:820px){
     .section8{
